Improved look of favorites and user profile

--- a/app/views/browse/_show.html.erb
+++ b/app/views/browse/_show.html.erb
@@ -1,10 +1,13 @@
 <div class="scroll-table" style="height:72vh;">
 <h2> <%= @school.name %> </h2>
 
-<% if current_user %>
-      <%= link_to "favorite",   favorite_school_path(@school, type: "favorite"), method: :put %>
-      <%= link_to "unfavorite", favorite_school_path(@school, type: "unfavorite"), method: :put %><br>
-<% end %>
+  <% if current_user %>
+      <% if current_user.favorites.include?(@school) %>
+          <%= link_to "unfavorite", favorite_school_path(@school, type: "unfavorite"), method: :put, class: "btn btn-primary" %><br>
+      <% else %>
+          <%= link_to "favorite",   favorite_school_path(@school, type: "favorite"), method: :put , class: "btn btn-primary" %><br>
+      <% end %>
+  <% end %>
 
 <%= pluralize(@school.ratings.size, "user") %> 
 rated this school
