--- a/app/views/pages/profile.erb
+++ b/app/views/pages/profile.erb
@@ -5,4 +5,4 @@
   <% end %>
 </table>
 
-<%= button_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary", method: :get  %>
+<%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
