--- a/app/views/surveys/_form.erb
+++ b/app/views/surveys/_form.erb
@@ -13,20 +13,20 @@
 	</div>
   <% end %>
   <p>
-    <%= f.label :Many_or_all_responses %><br>
+    <%= f.label :Very_satisfied %><br>
     <%= f.number_field :many_or_all_responses %>
   </p>
   <p>
-    <%= f.label :At_no_time_responses %><br>
-    <%= f.number_field :at_no_time_responses %>
+    <%= f.label :Somewhat_satisfied %><br>
+    <%= f.number_field :some_times_responses %>
   </p>
   <p>
-    <%= f.label :Few_times_responses %><br>
+    <%= f.label :Neither_satisfied_nor_dissatisfied %><br>
     <%= f.number_field :few_times_responses %>
   </p>
   <p>
-    <%= f.label :Some_times_responses %><br>
-    <%= f.number_field :some_times_responses %>
+    <%= f.label :Dissatisfied %><br>
+    <%= f.number_field :at_no_time_responses %>
   </p>
   <p>
     <%= f.submit %>
